clang/test/Ripple/ripple-parallel/thread-vector-expansion-missing-vector-header.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: target=hexagon{{.*}}
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s -DUSING_PRAGMA=1 2> %t.pragma.err; FileCheck %s --check-prefixes=CHECK,PRAGMACHECK --input-file=%t.pragma.err
// RUN: %clang -ffreestanding -S -Xclang -disable-llvm-passes -emit-llvm -fenable-ripple %s 2> %t.err; FileCheck %s --input-file=%t.pragma.err

#include <ripple/thread.h>

void check(int Chunk, long N, int start, long end, float x[restrict N],
           float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(0, 4);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #pragma ripple parallel Block(BSV) Dims(0)
  #else
  ripple_parallel_thread_chunk(BST, Chunk, 0);
  ripple_parallel(BSV, 0);
  #endif
  for (int i = start; i < end; ++i)
    xpy[i] = x[i] + y[i];
  ripple_thd_exit(ThreadBlockT);
}

// CHECK: thread-vector-expansion-missing-vector-header.c:11:3: error: unknown type name 'ripple_block_t'; did you mean 'ripple_thd_block_t'?
// CHECK:    11 |   ripple_block_t BSV = ripple_set_block_shape(0, 4);
// CHECK:       |   ^~~~~~~~~~~~~~
// CHECK:       |   ripple_thd_block_t
// CHECK: ripple/thread.h:{{.*}}: note: 'ripple_thd_block_t' declared here
// CHECK: thread-vector-expansion-missing-vector-header.c:11:24: error: call to undeclared function 'ripple_set_block_shape'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
// CHECK:    11 |   ripple_block_t BSV = ripple_set_block_shape(0, 4);
// CHECK:       |                        ^
// CHECK: thread-vector-expansion-missing-vector-header.c:11:24: note: did you mean 'ripple_thd_set_block_shape'?
// CHECK: ripple/thread.h:{{.*}}: note: 'ripple_thd_set_block_shape' declared here
// PRAGMACHECK: thread-vector-expansion-missing-vector-header.c:14:3: error: ripple_id takes a ripple block shape (ripple_block_t) as 1st argument (current type is 'struct ripple_thread_block *')
// PRAGMACHECK: thread-vector-expansion-missing-vector-header.c:14:3: error: ripple_get_block_size takes a ripple block shape (ripple_block_t) as 1st argument (current type is 'struct ripple_thread_block *')
// PRAGMACHECK: thread-vector-expansion-missing-vector-header.c:14:3: error: ripple_id takes a ripple block shape (ripple_block_t) as 1st argument (current type is 'struct ripple_thread_block *')
// PRAGMACHECK: thread-vector-expansion-missing-vector-header.c:14:3: error: ripple_get_block_size takes a ripple block shape (ripple_block_t) as 1st argument (current type is 'struct ripple_thread_block *')
